...
//
//  Created by Alberto Junquera Ramírez on 14/8/23.
//

import SwiftUI
enum TextFieldIcons : String{
    case Invisible = "Invisible"
    case Message = "Message"
    case Padlock = "Padlock"
    case Phone = "Phone"
    case User = "User"
    case Visible = "Visible"
}

struct CustomTextField : View {
    @Binding var text : String
    @State var fieldType : UITextContentType
    var leadingIcon: TextFieldIcons
...
